fixed spacing

--- a/nyt.css
+++ b/nyt.css
@@ -8,4 +8,5 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-size: contain;
+    margin-top: 30px;
 }
